OO-3516, OO-3513: lecture manager and principal access to coaching tool