@@ -25,6 +25,8 @@ import java.util.List;
 import java.util.Map;
 
 import org.olat.basesecurity.BaseSecurityModule;
+import org.olat.basesecurity.OrganisationModule;
+import org.olat.basesecurity.OrganisationRoles;
 import org.olat.core.gui.UserRequest;
 import org.olat.core.gui.components.form.flexible.FormItem;
 import org.olat.core.gui.components.form.flexible.FormItemContainer;
@@ -38,6 +40,7 @@ import org.olat.core.gui.components.form.flexible.impl.FormLayoutContainer;
 import org.olat.core.gui.control.Controller;
 import org.olat.core.gui.control.Event;
 import org.olat.core.gui.control.WindowControl;
+import org.olat.core.id.OrganisationRef;
 import org.olat.core.id.Roles;
 import org.olat.core.util.StringHelper;
 import org.olat.core.util.Util;
@@ -72,11 +75,15 @@ public class LecturesSearchFormController extends FormBasicController {
 	private final boolean adminProps;
 	private List<UserPropertyHandler> userPropertyHandlers;
 	private final Map<String,FormItem> propFormItems = new HashMap<>();
+	private final List<OrganisationRef> searcheableOrganisations;
+	
 	
 	@Autowired
 	private UserManager userManager;
 	@Autowired
 	private BaseSecurityModule securityModule;
+	@Autowired
+	private OrganisationModule organisationModule;
 	@Autowired
 	private RepositoryEntryLifecycleDAO lifecycleDao;
 	
@@ -87,6 +94,13 @@ public class LecturesSearchFormController extends FormBasicController {
 		Roles roles = ureq.getUserSession().getRoles();
 		admin = roles.isAdministrator() || roles.isLearnResourceManager() || roles.isLectureManager() || roles.isAuthor();
 		adminProps = securityModule.isUserAllowedAdminProps(ureq.getUserSession().getRoles());
+		
+		if(organisationModule.isEnabled()) {
+			searcheableOrganisations = roles.getOrganisationsWithRoles(OrganisationRoles.administrator,
+				OrganisationRoles.principal, OrganisationRoles.learnresourcemanager, OrganisationRoles.lecturemanager);
+		} else {
+			searcheableOrganisations = null;
+		}
 		
 		initForm(ureq);
 		updateDatesVisibility();
@@ -212,7 +226,7 @@ public class LecturesSearchFormController extends FormBasicController {
 			params.setStartDate(null);
 			params.setEndDate(null);
 			if(publicDatesEl.isOneSelected() && StringHelper.isLong(publicDatesEl.getSelectedKey())) {
-				RepositoryEntryLifecycle lifecycle = lifecycleDao.loadById(new Long(publicDatesEl.getSelectedKey()));
+				RepositoryEntryLifecycle lifecycle = lifecycleDao.loadById(Long.valueOf(publicDatesEl.getSelectedKey()));
 				params.setLifecycle(lifecycle);
 			} else {
 				params.setLifecycle(null);
@@ -226,6 +240,7 @@ public class LecturesSearchFormController extends FormBasicController {
 		params.setLogin(getLogin());
 		params.setBulkIdentifiers(getBulkIdentifiers());
 		params.setUserProperties(getSearchProperties());
+		params.setOrganisations(searcheableOrganisations);
 		return params;
 	}
 	
